chore: update config

--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -1,9 +1,9 @@
 [all:vars]
 app_version=latest
-product_name=tmpl
-repo_name=template-apprentissage
-database_name=tmpl
-domain_name=tmpl
+product_name=contrat
+repo_name=contrat
+database_name=contrat
+domain_name=contrat
 
 [production]
 
