--- a/.github/workflows/preview_cleanup.yml
+++ b/.github/workflows/preview_cleanup.yml
@@ -1,9 +1,7 @@
 name: Clean Previews
 on:
-  # __TEMPLATE_UPDATE__: Uncomment schedule section and remove empty array
-  []
-  # schedule:
-  #   - cron: "0 0 * * *"
+  schedule:
+    - cron: "0 0 * * *"
 
 concurrency:
   group: ${{ github.workflow }}
