--- a/.infra/env.ini
+++ b/.infra/env.ini
@@ -1,26 +1,26 @@
 [all:vars]
 app_version=latest
-product_name=tmpl
-repo_name=template-apprentissage
-database_name=tmpl
-domain_name=tmpl
+product_name=contrat
+repo_name=contrat
+database_name=contrat
+domain_name=contrat
 
 [production]
-
+51.77.159.162
 [production:vars]
 dns_name={{domain_name}}.apprentissage.beta.gouv.fr
 host_name={{product_name}}-production
 env_type=production
 
 [recette]
-
+51.38.230.45
 [recette:vars]
 dns_name={{domain_name}}-recette.apprentissage.beta.gouv.fr
 host_name={{product_name}}-recette
 env_type=recette
 
 [preview]
-
+51.68.44.237
 [preview:vars]
 dns_name={{domain_name}}-preview.apprentissage.beta.gouv.fr
 host_name={{product_name}}-preview
