--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "date-fns": "^2.30.0",
+    "lodash-es": "^4.17.21",
     "next": "^13.4.17",
     "next-plausible": "^3.10.2",
     "notion-client": "^6.16.0",
