fix: migration de l'environnement de recette

--- a/.infra/ansible/deploy.yml
+++ b/.infra/ansible/deploy.yml
@@ -7,16 +7,10 @@
   tasks:
     - include_tasks: ./tasks/files_copy.yml
 
-    - name: Création du docker-compose.yml {{env_type}}
-      shell:
-        chdir: /opt/app
-        cmd: 'sudo docker compose $(for file in $(ls docker-compose.*.yml); do echo -n "-f $file "; done) config -o  docker-compose.yml'
-      register: docker_deploy_output
-
     - name: Récupération des images docker
       shell:
         chdir: /opt/app
-        cmd: "sudo docker compose pull"
+        cmd: "/opt/app/tools/docker-compose.sh pull"
 
     - name: Récupération du status de la stack
       shell:
